Additional information equal spacing issue fixed

--- a/sass/site/site-compatible/woocommerce.scss
+++ b/sass/site/site-compatible/woocommerce.scss
@@ -526,6 +526,9 @@
 	.woocommerce-tabs {
 		.shop_attributes{
 			border-style: solid;
+			p {
+				padding: 0;
+			}
 			th {
 				border-left-width: 1px;
 				border-style: solid;
